fix dark mode

--- a/src/scss/theme/dark/block.scss
+++ b/src/scss/theme/dark/block.scss
@@ -154,7 +154,7 @@
 				}
 			}
 			.column.withColor {
-				.head .empty { color: $colorBlack; }
+				.head .empty { color: $colorSecondary; }
 			}
 
 			.card.add:hover, .card:hover .cardContent { border-color: $colorLinePrimary; }
